--- a/App/app/build.gradle
+++ b/App/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation "com.github.parse-community.Parse-SDK-Android:parse:1.25.0"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
+    implementation 'com.github.parse-community:ParseLiveQuery-Android:1.2.2'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
